<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="match_parent"
        android:layout_height="389dp" />

    <TextView
        android:id="@+id/text_2_2"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/text_2_2"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_2_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_2_1" />

    <Button
        android:id="@+id/button_2_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_2_2" />

</LinearLayout>
