<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dell.testapp_2.PetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_pet_1"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/text_pet_1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <SurfaceView
            android:id="@+id/surfaceView_pet"
            android:layout_width="match_parent"
            android:layout_height="380dp" />

        <TextView
            android:id="@+id/text_pet_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pet_2"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_pet_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_pet_3" />

        <Button
            android:id="@+id/button_pet_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_pet_1" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
